# reckon

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Dependencies.cmake  Dependencies.cmake.sha256  README.md  build.sh  install.sh  release.sh  test.sh
.github/: CODEOWNERS  release-notes.md
.github/workflows/: build.yaml  ci.yaml  package.yaml  release.yaml  staging.yaml  test.yaml
cmake/: BuildTree-sitter.cmake  BuildUnity.cmake  BuildUtil.cmake  ConfigTree-sitter-c.cmake  ConfigTree-sitter-java.cmake  ConfigTree-sitter.cmake  DependencyUtil.cmake  DocsUtil.cmake  ReckonInstallation.cmake  SanitizerUtil.cmake  TestCoverageCleanupUtil.cmake  TestCoverageUtil.cmake  TestUtil.cmake
cmake/inno/: scount.iss
docs/: Doxyfile  copyright  description  footer.html  layout.xml  page_examples.md  page_main.md  reckon.css
man/: scount.1
src/lib/: CMakeLists.txt
src/lib/c/: annotation.c  characters.c  debug.c  encoding.c  evaluation.h  factories.c  fileio.c  fileio.h  lang_c.c  lang_java.c  logical.c  physical.c  statistics.c  tree.c  words.c
src/lib/c/linux/: fileio.c
src/lib/c/win32/: fileio.c
src/lib/include/reckon/: reckon.h
src/lib/tests/: CMakeLists.txt
src/lib/tests/integration/c/: test_fileio.c
src/lib/tests/res/c/: sample.c  sample_annotated.c  sample_min_formatting.c
src/lib/tests/res/encodings/: Source_UTF_16BE.java  Source_UTF_16LE.java  Source_UTF_8.java  Source_UTF_8_with_BOM.java  text_UTF_16BE.txt  text_UTF_16BE_noNLend.txt  text_UTF_16LE.txt  text_UTF_16LE_noNLend.txt  text_UTF_8.txt  text_UTF_8_with_BOM.txt
src/lib/tests/res/java/: Sample.java  SampleAnnotated.java  SampleMinFormatting.java
src/lib/tests/res/mixed/: Source.java  source.c  text.txt  text2.md
src/lib/tests/res/txt/: 1sample1.txt  1sample2.txt  1sample3.txt
src/lib/tests/res/txt/res2/: 2sample1.txt  2sample2.txt
src/lib/tests/res/txt/res2/res3/: 3sample1.txt
src/lib/tests/res/txt/res2/res3/res4/: .placeholder.txt
src/lib/tests/unit/c/: test_character_count.c  test_count_options.c  test_encodings.c  test_factories.c  test_lang_c.c  test_lang_java.c  test_logical_lines.c  test_physical_lines.c  test_statistics.c  test_statistics_creation.c  test_word_count.c
src/scount/: CMakeLists.txt
src/scount/c/: annotation.c  arguments.c  logging.c  main.c  print.c  scount.h  statistics.c
src/scount/tests/: CMakeLists.txt
src/scount/tests/functionality/res/DirWithOneNonEligibleFile/: file.withUnknownExt
src/scount/tests/functionality/res/NotEligible/: file.withUnknownExt  fileWithoutExt
src/scount/tests/functionality/res/expected/: mixed.txt  mixedWithSyntaxError.txt  output_multiple_files.txt  output_single_file.txt
src/scount/tests/functionality/res/mixed/: Sample1.java  Sample2.java  sample1.c  sample1.md  sample1.txt  sample2.c  sample2.md  sample2.txt
src/scount/tests/functionality/res/mixedWithSyntaxError/: 02_has_syntax_error.c  03_correct_file.txt  CorrectFile.java
src/scount/tests/functionality/sh/: driver.sh  test_scount.sh  test_scount_invalid_input.sh  test_scount_misc.sh
src/scount/tests/unit/c/: test_logging.c  test_parse_args.c  test_print.c  test_statistics_input.c
